parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM programNP1 ID programNP2 SEMICOLON programA programB main
Rule 2     programNP1 -> <empty>
Rule 3     programNP2 -> <empty>
Rule 4     programA -> vars
Rule 5     programA -> empty
Rule 6     programB -> funcion programB
Rule 7     programB -> empty
Rule 8     vars -> VAR varsA
Rule 9     varsA -> varsB SEMICOLON varsF
Rule 10    varsB -> FILE varsNP2 ID varsNP3 varsNP6 varsE
Rule 11    varsB -> tipoSimple varsNP2 ID varsNP3 varsC varsNP6
Rule 12    varsNP2 -> <empty>
Rule 13    varsNP6 -> <empty>
Rule 14    varsC -> LEFTBRACKET varIsArray CTI varsNP4 RIGHTBRACKET varsD
Rule 15    varsC -> empty
Rule 16    varIsArray -> <empty>
Rule 17    varsNP4 -> <empty>
Rule 18    varsD -> LEFTBRACKET varIsMatrix CTI varsNP5 RIGHTBRACKET
Rule 19    varsD -> empty
Rule 20    varIsMatrix -> <empty>
Rule 21    varsNP5 -> <empty>
Rule 22    varsE -> COMMA ID varsNP3 varsNP6 varsE
Rule 23    varsE -> empty
Rule 24    varsNP3 -> <empty>
Rule 25    varsF -> varsA
Rule 26    varsF -> empty
Rule 27    funcion -> FUNC funcionA funcionNP1 ID funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs
Rule 28    quadStart -> <empty>
Rule 29    genMemReqs -> <empty>
Rule 30    funcionNP1 -> <empty>
Rule 31    funcionNP2 -> <empty>
Rule 32    funcionA -> tipoSimple funcionANP1
Rule 33    funcionA -> VOID funcionANP1
Rule 34    funcionANP1 -> <empty>
Rule 35    funcionB -> params
Rule 36    funcionB -> empty
Rule 37    funcionC -> vars
Rule 38    funcionC -> empty
Rule 39    main -> MAINSTART mainNP1 bloque getGlobalMemReqs
Rule 40    getGlobalMemReqs -> <empty>
Rule 41    mainNP1 -> <empty>
Rule 42    tipoSimple -> INT tipoSimpleNP1
Rule 43    tipoSimple -> FLOAT tipoSimpleNP1
Rule 44    tipoSimpleNP1 -> <empty>
Rule 45    params -> tipoSimple paramsNP1 ID paramsNP2 paramsA
Rule 46    paramsA -> COMMA tipoSimple paramsNP1 ID paramsNP2 paramsA
Rule 47    paramsA -> empty
Rule 48    paramsNP1 -> <empty>
Rule 49    paramsNP2 -> <empty>
Rule 50    bloque -> LEFTCURLY bloqueA RIGHTCURLY
Rule 51    bloqueA -> estatuto bloqueA
Rule 52    bloqueA -> empty
Rule 53    estatuto -> estatutoNP1 estatutoA
Rule 54    estatutoA -> asignacion
Rule 55    estatutoA -> llamada checkIfVoid
Rule 56    estatutoA -> read
Rule 57    estatutoA -> escritura
Rule 58    estatutoA -> return
Rule 59    estatutoA -> condicion
Rule 60    estatutoA -> ciclo
Rule 61    checkIfVoid -> <empty>
Rule 62    estatutoNP1 -> <empty>
Rule 63    asignacion -> variable ASSIGNOP asignacionNP1 exp asignacionNP2
Rule 64    asignacionNP1 -> <empty>
Rule 65    asignacionNP2 -> <empty>
Rule 66    llamada -> ID llamadaNP1 LEFTPAR loeNP2 primerparam llamadaA RIGHTPAR llamadaNP3
Rule 67    primerparam -> exp loeNP1
Rule 68    primerparam -> empty
Rule 69    llamadaA -> COMMA exp loeNP1 llamadaA
Rule 70    llamadaA -> empty
Rule 71    llamadaNP1 -> <empty>
Rule 72    llamadaNP3 -> <empty>
Rule 73    read -> READ ID readNP1
Rule 74    readNP1 -> <empty>
Rule 75    escritura -> WRITE escrituraNP1 LEFTPAR loeNP2 escrituraA escrituraB RIGHTPAR escrituraNP3
Rule 76    escrituraNP1 -> <empty>
Rule 77    escrituraNP3 -> <empty>
Rule 78    loeNP2 -> <empty>
Rule 79    escrituraA -> exp loeNP1
Rule 80    escrituraA -> CTSTRING escrituraNP2
Rule 81    loeNP1 -> <empty>
Rule 82    escrituraNP2 -> <empty>
Rule 83    escrituraB -> COMMA escrituraA escrituraB
Rule 84    escrituraB -> empty
Rule 85    return -> RETURN exp returnNP1
Rule 86    returnNP1 -> <empty>
Rule 87    condicion -> IF LEFTPAR exp condicionNP1 RIGHTPAR bloque condicionA condicionANP2
Rule 88    condicionNP1 -> <empty>
Rule 89    condicionA -> ELSE condicionANP1 bloque
Rule 90    condicionA -> empty
Rule 91    condicionANP1 -> <empty>
Rule 92    condicionANP2 -> <empty>
Rule 93    ciclo -> FROM exp TO exp DO cicloNP1 bloque cicloNP2
Rule 94    cicloNP1 -> <empty>
Rule 95    cicloNP2 -> <empty>
Rule 96    variable -> ID variableNP1 variableA
Rule 97    variableNP1 -> <empty>
Rule 98    variableA -> LEFTBRACKET check_if_non_atomic exp verify RIGHTBRACKET variableB
Rule 99    variableA -> empty
Rule 100   check_if_non_atomic -> <empty>
Rule 101   verify -> <empty>
Rule 102   variableB -> LEFTBRACKET check_if_matrix exp verify_matrix RIGHTBRACKET
Rule 103   variableB -> empty on_matrix_check
Rule 104   check_if_matrix -> <empty>
Rule 105   verify_matrix -> <empty>
Rule 106   on_matrix_check -> <empty>
Rule 107   exp -> exp1 expA
Rule 108   expNP1 -> <empty>
Rule 109   expA -> OROP operNP1 exp1 expNP1 expA
Rule 110   expA -> empty
Rule 111   exp1 -> exp2 exp1A
Rule 112   exp1NP1 -> <empty>
Rule 113   exp1A -> ANDOP operNP1 exp2 exp1NP1 exp1A
Rule 114   exp1A -> empty
Rule 115   exp2 -> exp3 exp2A
Rule 116   exp2A -> exp2B operNP1 exp3 exp2ANP1
Rule 117   exp2A -> empty
Rule 118   exp2ANP1 -> <empty>
Rule 119   exp2B -> LESSTHANOP
Rule 120   exp2B -> GREATERTHANOP
Rule 121   exp2B -> DIFFERENTOP
Rule 122   exp2B -> EQUALOP
Rule 123   exp3 -> termino exp3A
Rule 124   exp3NP1 -> <empty>
Rule 125   exp3A -> exp3B operNP1 termino exp3NP1 exp3A
Rule 126   exp3A -> empty
Rule 127   exp3B -> SUMOP
Rule 128   exp3B -> SUBOP
Rule 129   termino -> terminoC terminoA
Rule 130   terminoA -> terminoB operNP1 terminoC terminoANP1 terminoA
Rule 131   terminoA -> empty
Rule 132   terminoANP1 -> <empty>
Rule 133   terminoB -> MULOP
Rule 134   terminoB -> DIVOP
Rule 135   terminoC -> factor
Rule 136   terminoC -> llamada checkIfNotVoid
Rule 137   checkIfNotVoid -> <empty>
Rule 138   factor -> LEFTPAR operNP1 exp RIGHTPAR factorNP1
Rule 139   factor -> CTI factorNP2
Rule 140   factor -> CTF factorNP3
Rule 141   factor -> variable
Rule 142   operNP1 -> <empty>
Rule 143   factorNP1 -> <empty>
Rule 144   factorNP2 -> <empty>
Rule 145   factorNP3 -> <empty>
Rule 146   empty -> <empty>

Terminals, with rules where they appear

ANDOP                : 113
ASSIGNOP             : 63
COMMA                : 22 46 69 83
CTF                  : 140
CTI                  : 14 18 139
CTSTRING             : 80
DIFFERENTOP          : 121
DIVOP                : 134
DO                   : 93
ELSE                 : 89
EQUALOP              : 122
FILE                 : 10
FLOAT                : 43
FROM                 : 93
FUNC                 : 27
GREATERTHANOP        : 120
ID                   : 1 10 11 22 27 45 46 66 73 96
IF                   : 87
INT                  : 42
LEFTBRACKET          : 14 18 98 102
LEFTCURLY            : 50
LEFTPAR              : 27 66 75 87 138
LESSTHANOP           : 119
MAINSTART            : 39
MULOP                : 133
OROP                 : 109
PROGRAM              : 1
READ                 : 73
RETURN               : 85
RIGHTBRACKET         : 14 18 98 102
RIGHTCURLY           : 50
RIGHTPAR             : 27 66 75 87 138
SEMICOLON            : 1 9 27
SUBOP                : 128
SUMOP                : 127
TO                   : 93
VAR                  : 8
VOID                 : 33
WRITE                : 75
error                : 

Nonterminals, with rules where they appear

asignacion           : 54
asignacionNP1        : 63
asignacionNP2        : 63
bloque               : 27 39 87 89 93
bloqueA              : 50 51
checkIfNotVoid       : 136
checkIfVoid          : 55
check_if_matrix      : 102
check_if_non_atomic  : 98
ciclo                : 60
cicloNP1             : 93
cicloNP2             : 93
condicion            : 59
condicionA           : 87
condicionANP1        : 89
condicionANP2        : 87
condicionNP1         : 87
empty                : 5 7 15 19 23 26 36 38 47 52 68 70 84 90 99 103 110 114 117 126 131
escritura            : 57
escrituraA           : 75 83
escrituraB           : 75 83
escrituraNP1         : 75
escrituraNP2         : 80
escrituraNP3         : 75
estatuto             : 51
estatutoA            : 53
estatutoNP1          : 53
exp                  : 63 67 69 79 85 87 93 93 98 102 138
exp1                 : 107 109
exp1A                : 111 113
exp1NP1              : 113
exp2                 : 111 113
exp2A                : 115
exp2ANP1             : 116
exp2B                : 116
exp3                 : 115 116
exp3A                : 123 125
exp3B                : 125
exp3NP1              : 125
expA                 : 107 109
expNP1               : 109
factor               : 135
factorNP1            : 138
factorNP2            : 139
factorNP3            : 140
funcion              : 6
funcionA             : 27
funcionANP1          : 32 33
funcionB             : 27
funcionC             : 27
funcionNP1           : 27
funcionNP2           : 27
genMemReqs           : 27
getGlobalMemReqs     : 39
llamada              : 55 136
llamadaA             : 66 69
llamadaNP1           : 66
llamadaNP3           : 66
loeNP1               : 67 69 79
loeNP2               : 66 75
main                 : 1
mainNP1              : 39
on_matrix_check      : 103
operNP1              : 109 113 116 125 130 138
params               : 35
paramsA              : 45 46
paramsNP1            : 45 46
paramsNP2            : 45 46
primerparam          : 66
program              : 0
programA             : 1
programB             : 1 6
programNP1           : 1
programNP2           : 1
quadStart            : 27
read                 : 56
readNP1              : 73
return               : 58
returnNP1            : 85
termino              : 123 125
terminoA             : 129 130
terminoANP1          : 130
terminoB             : 130
terminoC             : 129 130
tipoSimple           : 11 32 45 46
tipoSimpleNP1        : 42 43
varIsArray           : 14
varIsMatrix          : 18
variable             : 63 141
variableA            : 96
variableB            : 98
variableNP1          : 96
vars                 : 4 37
varsA                : 8 25
varsB                : 9
varsC                : 11
varsD                : 14
varsE                : 10 22
varsF                : 9
varsNP2              : 10 11
varsNP3              : 10 11 22
varsNP4              : 14
varsNP5              : 18
varsNP6              : 10 11 22
verify               : 98
verify_matrix        : 102

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM programNP1 ID programNP2 SEMICOLON programA programB main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . programNP1 ID programNP2 SEMICOLON programA programB main
    (2) programNP1 -> .

    ID              reduce using rule 2 (programNP1 -> .)

    programNP1                     shift and go to state 3

state 3

    (1) program -> PROGRAM programNP1 . ID programNP2 SEMICOLON programA programB main

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM programNP1 ID . programNP2 SEMICOLON programA programB main
    (3) programNP2 -> .

    SEMICOLON       reduce using rule 3 (programNP2 -> .)

    programNP2                     shift and go to state 5

state 5

    (1) program -> PROGRAM programNP1 ID programNP2 . SEMICOLON programA programB main

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM programNP1 ID programNP2 SEMICOLON . programA programB main
    (4) programA -> . vars
    (5) programA -> . empty
    (8) vars -> . VAR varsA
    (146) empty -> .

    VAR             shift and go to state 10
    FUNC            reduce using rule 146 (empty -> .)
    MAINSTART       reduce using rule 146 (empty -> .)

    programA                       shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM programNP1 ID programNP2 SEMICOLON programA . programB main
    (6) programB -> . funcion programB
    (7) programB -> . empty
    (27) funcion -> . FUNC funcionA funcionNP1 ID funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs
    (146) empty -> .

    FUNC            shift and go to state 14
    MAINSTART       reduce using rule 146 (empty -> .)

    programB                       shift and go to state 11
    funcion                        shift and go to state 12
    empty                          shift and go to state 13

state 8

    (4) programA -> vars .

    FUNC            reduce using rule 4 (programA -> vars .)
    MAINSTART       reduce using rule 4 (programA -> vars .)


state 9

    (5) programA -> empty .

    FUNC            reduce using rule 5 (programA -> empty .)
    MAINSTART       reduce using rule 5 (programA -> empty .)


state 10

    (8) vars -> VAR . varsA
    (9) varsA -> . varsB SEMICOLON varsF
    (10) varsB -> . FILE varsNP2 ID varsNP3 varsNP6 varsE
    (11) varsB -> . tipoSimple varsNP2 ID varsNP3 varsC varsNP6
    (42) tipoSimple -> . INT tipoSimpleNP1
    (43) tipoSimple -> . FLOAT tipoSimpleNP1

    FILE            shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20

    varsA                          shift and go to state 15
    varsB                          shift and go to state 16
    tipoSimple                     shift and go to state 18

state 11

    (1) program -> PROGRAM programNP1 ID programNP2 SEMICOLON programA programB . main
    (39) main -> . MAINSTART mainNP1 bloque getGlobalMemReqs

    MAINSTART       shift and go to state 22

    main                           shift and go to state 21

state 12

    (6) programB -> funcion . programB
    (6) programB -> . funcion programB
    (7) programB -> . empty
    (27) funcion -> . FUNC funcionA funcionNP1 ID funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs
    (146) empty -> .

    FUNC            shift and go to state 14
    MAINSTART       reduce using rule 146 (empty -> .)

    funcion                        shift and go to state 12
    programB                       shift and go to state 23
    empty                          shift and go to state 13

state 13

    (7) programB -> empty .

    MAINSTART       reduce using rule 7 (programB -> empty .)


state 14

    (27) funcion -> FUNC . funcionA funcionNP1 ID funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs
    (32) funcionA -> . tipoSimple funcionANP1
    (33) funcionA -> . VOID funcionANP1
    (42) tipoSimple -> . INT tipoSimpleNP1
    (43) tipoSimple -> . FLOAT tipoSimpleNP1

    VOID            shift and go to state 26
    INT             shift and go to state 19
    FLOAT           shift and go to state 20

    funcionA                       shift and go to state 24
    tipoSimple                     shift and go to state 25

state 15

    (8) vars -> VAR varsA .

    FUNC            reduce using rule 8 (vars -> VAR varsA .)
    MAINSTART       reduce using rule 8 (vars -> VAR varsA .)
    LEFTCURLY       reduce using rule 8 (vars -> VAR varsA .)


state 16

    (9) varsA -> varsB . SEMICOLON varsF

    SEMICOLON       shift and go to state 27


state 17

    (10) varsB -> FILE . varsNP2 ID varsNP3 varsNP6 varsE
    (12) varsNP2 -> .

    ID              reduce using rule 12 (varsNP2 -> .)

    varsNP2                        shift and go to state 28

state 18

    (11) varsB -> tipoSimple . varsNP2 ID varsNP3 varsC varsNP6
    (12) varsNP2 -> .

    ID              reduce using rule 12 (varsNP2 -> .)

    varsNP2                        shift and go to state 29

state 19

    (42) tipoSimple -> INT . tipoSimpleNP1
    (44) tipoSimpleNP1 -> .

    ID              reduce using rule 44 (tipoSimpleNP1 -> .)

    tipoSimpleNP1                  shift and go to state 30

state 20

    (43) tipoSimple -> FLOAT . tipoSimpleNP1
    (44) tipoSimpleNP1 -> .

    ID              reduce using rule 44 (tipoSimpleNP1 -> .)

    tipoSimpleNP1                  shift and go to state 31

state 21

    (1) program -> PROGRAM programNP1 ID programNP2 SEMICOLON programA programB main .

    $end            reduce using rule 1 (program -> PROGRAM programNP1 ID programNP2 SEMICOLON programA programB main .)


state 22

    (39) main -> MAINSTART . mainNP1 bloque getGlobalMemReqs
    (41) mainNP1 -> .

    LEFTCURLY       reduce using rule 41 (mainNP1 -> .)

    mainNP1                        shift and go to state 32

state 23

    (6) programB -> funcion programB .

    MAINSTART       reduce using rule 6 (programB -> funcion programB .)


state 24

    (27) funcion -> FUNC funcionA . funcionNP1 ID funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs
    (30) funcionNP1 -> .

    ID              reduce using rule 30 (funcionNP1 -> .)

    funcionNP1                     shift and go to state 33

state 25

    (32) funcionA -> tipoSimple . funcionANP1
    (34) funcionANP1 -> .

    ID              reduce using rule 34 (funcionANP1 -> .)

    funcionANP1                    shift and go to state 34

state 26

    (33) funcionA -> VOID . funcionANP1
    (34) funcionANP1 -> .

    ID              reduce using rule 34 (funcionANP1 -> .)

    funcionANP1                    shift and go to state 35

state 27

    (9) varsA -> varsB SEMICOLON . varsF
    (25) varsF -> . varsA
    (26) varsF -> . empty
    (9) varsA -> . varsB SEMICOLON varsF
    (146) empty -> .
    (10) varsB -> . FILE varsNP2 ID varsNP3 varsNP6 varsE
    (11) varsB -> . tipoSimple varsNP2 ID varsNP3 varsC varsNP6
    (42) tipoSimple -> . INT tipoSimpleNP1
    (43) tipoSimple -> . FLOAT tipoSimpleNP1

    FUNC            reduce using rule 146 (empty -> .)
    MAINSTART       reduce using rule 146 (empty -> .)
    LEFTCURLY       reduce using rule 146 (empty -> .)
    FILE            shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20

    varsB                          shift and go to state 16
    varsF                          shift and go to state 36
    varsA                          shift and go to state 37
    empty                          shift and go to state 38
    tipoSimple                     shift and go to state 18

state 28

    (10) varsB -> FILE varsNP2 . ID varsNP3 varsNP6 varsE

    ID              shift and go to state 39


state 29

    (11) varsB -> tipoSimple varsNP2 . ID varsNP3 varsC varsNP6

    ID              shift and go to state 40


state 30

    (42) tipoSimple -> INT tipoSimpleNP1 .

    ID              reduce using rule 42 (tipoSimple -> INT tipoSimpleNP1 .)


state 31

    (43) tipoSimple -> FLOAT tipoSimpleNP1 .

    ID              reduce using rule 43 (tipoSimple -> FLOAT tipoSimpleNP1 .)


state 32

    (39) main -> MAINSTART mainNP1 . bloque getGlobalMemReqs
    (50) bloque -> . LEFTCURLY bloqueA RIGHTCURLY

    LEFTCURLY       shift and go to state 42

    bloque                         shift and go to state 41

state 33

    (27) funcion -> FUNC funcionA funcionNP1 . ID funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs

    ID              shift and go to state 43


state 34

    (32) funcionA -> tipoSimple funcionANP1 .

    ID              reduce using rule 32 (funcionA -> tipoSimple funcionANP1 .)


state 35

    (33) funcionA -> VOID funcionANP1 .

    ID              reduce using rule 33 (funcionA -> VOID funcionANP1 .)


state 36

    (9) varsA -> varsB SEMICOLON varsF .

    FUNC            reduce using rule 9 (varsA -> varsB SEMICOLON varsF .)
    MAINSTART       reduce using rule 9 (varsA -> varsB SEMICOLON varsF .)
    LEFTCURLY       reduce using rule 9 (varsA -> varsB SEMICOLON varsF .)


state 37

    (25) varsF -> varsA .

    FUNC            reduce using rule 25 (varsF -> varsA .)
    MAINSTART       reduce using rule 25 (varsF -> varsA .)
    LEFTCURLY       reduce using rule 25 (varsF -> varsA .)


state 38

    (26) varsF -> empty .

    FUNC            reduce using rule 26 (varsF -> empty .)
    MAINSTART       reduce using rule 26 (varsF -> empty .)
    LEFTCURLY       reduce using rule 26 (varsF -> empty .)


state 39

    (10) varsB -> FILE varsNP2 ID . varsNP3 varsNP6 varsE
    (24) varsNP3 -> .

    COMMA           reduce using rule 24 (varsNP3 -> .)
    SEMICOLON       reduce using rule 24 (varsNP3 -> .)

    varsNP3                        shift and go to state 44

state 40

    (11) varsB -> tipoSimple varsNP2 ID . varsNP3 varsC varsNP6
    (24) varsNP3 -> .

    LEFTBRACKET     reduce using rule 24 (varsNP3 -> .)
    SEMICOLON       reduce using rule 24 (varsNP3 -> .)

    varsNP3                        shift and go to state 45

state 41

    (39) main -> MAINSTART mainNP1 bloque . getGlobalMemReqs
    (40) getGlobalMemReqs -> .

    $end            reduce using rule 40 (getGlobalMemReqs -> .)

    getGlobalMemReqs               shift and go to state 46

state 42

    (50) bloque -> LEFTCURLY . bloqueA RIGHTCURLY
    (51) bloqueA -> . estatuto bloqueA
    (52) bloqueA -> . empty
    (53) estatuto -> . estatutoNP1 estatutoA
    (146) empty -> .
    (62) estatutoNP1 -> .

    RIGHTCURLY      reduce using rule 146 (empty -> .)
    ID              reduce using rule 62 (estatutoNP1 -> .)
    READ            reduce using rule 62 (estatutoNP1 -> .)
    WRITE           reduce using rule 62 (estatutoNP1 -> .)
    RETURN          reduce using rule 62 (estatutoNP1 -> .)
    IF              reduce using rule 62 (estatutoNP1 -> .)
    FROM            reduce using rule 62 (estatutoNP1 -> .)

    bloqueA                        shift and go to state 47
    estatuto                       shift and go to state 48
    empty                          shift and go to state 49
    estatutoNP1                    shift and go to state 50

state 43

    (27) funcion -> FUNC funcionA funcionNP1 ID . funcionNP2 LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs
    (31) funcionNP2 -> .

    LEFTPAR         reduce using rule 31 (funcionNP2 -> .)

    funcionNP2                     shift and go to state 51

state 44

    (10) varsB -> FILE varsNP2 ID varsNP3 . varsNP6 varsE
    (13) varsNP6 -> .

    COMMA           reduce using rule 13 (varsNP6 -> .)
    SEMICOLON       reduce using rule 13 (varsNP6 -> .)

    varsNP6                        shift and go to state 52

state 45

    (11) varsB -> tipoSimple varsNP2 ID varsNP3 . varsC varsNP6
    (14) varsC -> . LEFTBRACKET varIsArray CTI varsNP4 RIGHTBRACKET varsD
    (15) varsC -> . empty
    (146) empty -> .

    LEFTBRACKET     shift and go to state 54
    SEMICOLON       reduce using rule 146 (empty -> .)

    varsC                          shift and go to state 53
    empty                          shift and go to state 55

state 46

    (39) main -> MAINSTART mainNP1 bloque getGlobalMemReqs .

    $end            reduce using rule 39 (main -> MAINSTART mainNP1 bloque getGlobalMemReqs .)


state 47

    (50) bloque -> LEFTCURLY bloqueA . RIGHTCURLY

    RIGHTCURLY      shift and go to state 56


state 48

    (51) bloqueA -> estatuto . bloqueA
    (51) bloqueA -> . estatuto bloqueA
    (52) bloqueA -> . empty
    (53) estatuto -> . estatutoNP1 estatutoA
    (146) empty -> .
    (62) estatutoNP1 -> .

    RIGHTCURLY      reduce using rule 146 (empty -> .)
    ID              reduce using rule 62 (estatutoNP1 -> .)
    READ            reduce using rule 62 (estatutoNP1 -> .)
    WRITE           reduce using rule 62 (estatutoNP1 -> .)
    RETURN          reduce using rule 62 (estatutoNP1 -> .)
    IF              reduce using rule 62 (estatutoNP1 -> .)
    FROM            reduce using rule 62 (estatutoNP1 -> .)

    estatuto                       shift and go to state 48
    bloqueA                        shift and go to state 57
    empty                          shift and go to state 49
    estatutoNP1                    shift and go to state 50

state 49

    (52) bloqueA -> empty .

    RIGHTCURLY      reduce using rule 52 (bloqueA -> empty .)


state 50

    (53) estatuto -> estatutoNP1 . estatutoA
    (54) estatutoA -> . asignacion
    (55) estatutoA -> . llamada checkIfVoid
    (56) estatutoA -> . read
    (57) estatutoA -> . escritura
    (58) estatutoA -> . return
    (59) estatutoA -> . condicion
    (60) estatutoA -> . ciclo
    (63) asignacion -> . variable ASSIGNOP asignacionNP1 exp asignacionNP2
    (66) llamada -> . ID llamadaNP1 LEFTPAR loeNP2 primerparam llamadaA RIGHTPAR llamadaNP3
    (73) read -> . READ ID readNP1
    (75) escritura -> . WRITE escrituraNP1 LEFTPAR loeNP2 escrituraA escrituraB RIGHTPAR escrituraNP3
    (85) return -> . RETURN exp returnNP1
    (87) condicion -> . IF LEFTPAR exp condicionNP1 RIGHTPAR bloque condicionA condicionANP2
    (93) ciclo -> . FROM exp TO exp DO cicloNP1 bloque cicloNP2
    (96) variable -> . ID variableNP1 variableA

    ID              shift and go to state 67
    READ            shift and go to state 68
    WRITE           shift and go to state 69
    RETURN          shift and go to state 70
    IF              shift and go to state 71
    FROM            shift and go to state 72

    estatutoA                      shift and go to state 58
    asignacion                     shift and go to state 59
    llamada                        shift and go to state 60
    read                           shift and go to state 61
    escritura                      shift and go to state 62
    return                         shift and go to state 63
    condicion                      shift and go to state 64
    ciclo                          shift and go to state 65
    variable                       shift and go to state 66

state 51

    (27) funcion -> FUNC funcionA funcionNP1 ID funcionNP2 . LEFTPAR funcionB RIGHTPAR SEMICOLON funcionC quadStart bloque genMemReqs

    LEFTPAR         shift and go to state 73


state 52

    (10) varsB -> FILE varsNP2 ID varsNP3 varsNP6 . varsE
    (22) varsE -> . COMMA ID varsNP3 varsNP6 varsE
    (23) varsE -> . empty
    (146) empty -> .

    COMMA           shift and go to state 75
    SEMICOLON       reduce using rule 146 (empty -> .)

    varsE                          shift and go to state 74
    empty                          shift and go to state 76

state 53

    (11) varsB -> tipoSimple varsNP2 ID varsNP3 varsC . varsNP6
    (13) varsNP6 -> .

    SEMICOLON       reduce using rule 13 (varsNP6 -> .)

    varsNP6                        shift and go to state 77

state 54

    (14) varsC -> LEFTBRACKET . varIsArray CTI varsNP4 RIGHTBRACKET varsD
    (16) varIsArray -> .

    CTI             reduce using rule 16 (varIsArray -> .)

    varIsArray                     shift and go to state 78

state 55

    (15) varsC -> empty .

    SEMICOLON       reduce using rule 15 (varsC -> empty .)


state 56

    (50) bloque -> LEFTCURLY bloqueA RIGHTCURLY .

    $end            reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    ELSE            reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    ID              reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    READ            reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    WRITE           reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    RETURN          reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    IF              reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    FROM            reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    RIGHTCURLY      reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    FUNC            reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)
    MAINSTART       reduce using rule 50 (bloque -> LEFTCURLY bloqueA RIGHTCURLY .)


state 57

    (51) bloqueA -> estatuto bloqueA .

    RIGHTCURLY      reduce using rule 51 (bloqueA -> estatuto bloqueA .)


state 58

    (53) estatuto -> estatutoNP1 estatutoA .

    ID              reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)
    READ            reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)
    WRITE           reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)
    RETURN          reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)
    IF              reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)
    FROM            reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)
    RIGHTCURLY      reduce using rule 53 (estatuto -> estatutoNP1 estatutoA .)


state 59

    (54) estatutoA -> asignacion .

    ID              reduce using rule 54 (estatutoA -> asignacion .)
    READ            reduce using rule 54 (estatutoA -> asignacion .)
    WRITE           reduce using rule 54 (estatutoA -> asignacion .)
    RETURN          reduce using rule 54 (estatutoA -> asignacion .)
    IF              reduce using rule 54 (estatutoA -> asignacion .)
    FROM            reduce using rule 54 (estatutoA -> asignacion .)
    RIGHTCURLY      reduce using rule 54 (estatutoA -> asignacion .)


state 60

    (55) estatutoA -> llamada . checkIfVoid
    (61) checkIfVoid -> .

    ID              reduce using rule 61 (checkIfVoid -> .)
    READ            reduce using rule 61 (checkIfVoid -> .)
    WRITE           reduce using rule 61 (checkIfVoid -> .)
    RETURN          reduce using rule 61 (checkIfVoid -> .)
    IF              reduce using rule 61 (checkIfVoid -> .)
    FROM            reduce using rule 61 (checkIfVoid -> .)
    RIGHTCURLY      reduce using rule 61 (checkIfVoid -> .)

    checkIfVoid                    shift and go to state 79

state 61

    (56) estatutoA -> read .

    ID              reduce using rule 56 (estatutoA -> read .)
    READ            reduce using rule 56 (estatutoA -> read .)
    WRITE           reduce using rule 56 (estatutoA -> read .)
    RETURN          reduce using rule 56 (estatutoA -> read .)
    IF              reduce using rule 56 (estatutoA -> read .)
    FROM            reduce using rule 56 (estatutoA -> read .)
    RIGHTCURLY      reduce using rule 56 (estatutoA -> read .)


state 62

    (57) estatutoA -> escritura .

    ID              reduce using rule 57 (estatutoA -> escritura .)
    READ            reduce using rule 57 (estatutoA -> escritura .)
    WRITE           reduce using rule 57 (estatutoA -> escritura .)
    RETURN          reduce using rule 57 (estatutoA -> escritura .)
    IF              reduce using rule 57 (estatutoA -> escritura .)
    FROM            reduce using rule 57 (estatutoA -> escritura .)
    RIGHTCURLY      reduce using rule 57 (estatutoA -> escritura .)


state 63

    (58) estatutoA -> return .

    ID              reduce using rule 58 (estatutoA -> return .)
    READ            reduce using rule 58 (estatutoA -> return .)
    WRITE           reduce using rule 58 (estatutoA -> return .)
    RETURN          reduce using rule 58 (estatutoA -> return .)
    IF              reduce using rule 58 (estatutoA -> return .)
    FROM            reduce using rule 58 (estatutoA -> return .)
    RIGHTCURLY      reduce using rule 58 (estatutoA -> return .)


state 64

    (59) estatutoA -> condicion .

    ID              reduce using rule 59 (estatutoA -> condicion .)
    READ            reduce using rule 59 (estatutoA -> condicion .)
    WRITE           reduce using rule 59 (estatutoA -> condicion .)
    RETURN          reduce using rule 59 (estatutoA -> condicion .)
    IF              reduce using rule 59 (estatutoA -> condicion .)
    FROM            reduce using rule 59 (estatutoA -> condicion .)
    RIGHTCURLY      reduce using rule 59 (estatutoA -> condicion .)


state 65

    (60) estatutoA -> ciclo .

    ID              reduce using rule 60 (estatutoA -> ciclo .)
    READ            reduce using rule 60 (estatutoA -> ciclo .)
    WRITE           reduce using rule 60 (estatutoA -> ciclo .)
    RETURN          reduce using rule 60 (estatutoA -> ciclo .)
    IF              reduce using rule 60 (estatutoA -> ciclo .)
    FROM            reduce using rule 60 (estatutoA -> ciclo .)
    RIGHTCURLY      reduce using rule 60 (estatutoA -> ciclo .)


state 66

    (63) asignacion -> variable . ASSIGNOP asignacionNP1 exp asignacionNP2

    ASSIGNOP        shift and go to state 80


state 67
